Name: debiania
Version: 3.0.0
Stability: alpha

Synopsis: just another Debian blog

Author: Alexander Batischev
Maintainer:  eual.jp@gmail.com
License: BSD3

Build-type: Simple
Cabal-version: >= 1.2

Executable debiania
    Main-is: debiania.hs
    Build-Depends: base == 4.*
                 , HTTP == 4000.*
                 , MissingH
                 , hakyll == 4.*
                 , text
                 , time
