Name: debiania
Version: 3.0.0
Stability: alpha

Synopsis: just another Debian blog

Author: Alexander Batischev
Maintainer:  eual.jp@gmail.com
License: BSD3

Build-type: Simple
Cabal-version: >= 1.2

Executable debiania
    Hs-Source-Dirs: src
    Main-is: debiania.hs
    Other-Modules: Debiania.Compilers
                 , Debiania.Feeds
                 , Debiania.Posts
                 , Debiania.Settings
    GHC-Options: -threaded -rtsopts -with-rtsopts=-N -Wall -Werror
    Build-Depends: base == 4.*
                 , HTTP == 4000.*
                 , MissingH
                 , aeson
                 , bytestring
                 , filepath
                 , hakyll == 4.*
                 , pandoc
                 , text
                 , time
                 , unordered-containers
