Name: debiania
Version: 3.0.0
Stability: alpha

Synopsis: just another Debian blog

Author: Alexander Batischev
Maintainer:  eual.jp@gmail.com
License: BSD3

Build-type: Simple
Cabal-version: >= 1.6

Executable debiania
    Hs-Source-Dirs: src
    Main-is: debiania.hs
    Other-Modules: Debiania.AboutPage
                 , Debiania.Archives
                 , Debiania.Assets
                 , Debiania.CSS
                 , Debiania.Compilers
                 , Debiania.Context
                 , Debiania.Feeds
                 , Debiania.IndexPage
                 , Debiania.NotFoundPage
                 , Debiania.Posts
                 , Debiania.Settings
                 , Debiania.Sitemap
                 , Debiania.SubscribePage
    GHC-Options: -threaded -rtsopts -with-rtsopts=-N -Wall -Werror
    Build-Depends: base == 4.*
                 , HTTP == 4000.*
                 , aeson
                 , blaze-html
                 , bytestring
                 , filepath
                 , hakyll == 4.*
                 , pandoc
                 , text
                 , time
                 , unordered-containers
